implement tag inputs

--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,17 @@
   "manifest_version": 2,
   "name": "hn-friends",
   "version": "1.0",
-  "description": "Highlight your friends on Hacker News.",
+  "description": "Highlight and tag your friends on Hacker News.",
   "permissions": ["storage"],
+  "web_accessible_resources": ["img/tag.svg"],
   "content_scripts": [
     {
       "matches": ["https://news.ycombinator.com/*"],
-      "js": ["utils.js", "hn-friends.js"]
+      "js": ["src/utils.js", "src/hn-friends.js"]
     },
     {
       "matches": ["https://news.ycombinator.com/user?id=*"],
-      "js": ["user.js"]
+      "js": ["src/user.js"]
     }
   ]
 }
