remove popup.html from web_accessible_resources

--- a/hn-friends/manifest.json
+++ b/hn-friends/manifest.json
@@ -10,8 +10,7 @@
   },
   "permissions": ["storage"],
   "web_accessible_resources": [
-    "img/tag.svg",
-    "popup/popup.html"
+    "img/tag.svg"
   ],
   "content_scripts": [
     {
